# GeoShield

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  geoshield-preview.html
backend/: config.py  main.py  pyproject.toml
backend/agent/: __init__.py  edges.py  graph.py  state.py
backend/agent/nodes/: __init__.py  classify.py  clip_fallback.py  cluster.py  describe.py  format.py  preprocess.py  retrieve.py  retry.py  store.py  synthesize.py  validate.py
backend/api/: __init__.py  middleware.py  schemas.py
backend/api/routes/: __init__.py  analyses.py  analyze.py  health.py  history.py
backend/models/: __init__.py  types.py
backend/services/: __init__.py  clip.py  embeddings.py  llm.py  qdrant.py  storage.py  vllm.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx
frontend/src/styles/: globals.css
